--- a/app-administrator-dystrybutorzy-umowy.html
+++ b/app-administrator-dystrybutorzy-umowy.html
@@ -99,6 +99,8 @@
                                     <li class="nav-item"><a class="nav-link" href="app-administrator-dystrybutorzy-szczegoly.html">Dane firmy</a></li>
                                     <li class="nav-item"><a class="nav-link" href="app-administrator-dystrybutorzy-taryfy.html">Taryfy</a></li>
                                     <li class="nav-item"><a class="nav-link active" href="app-administrator-dystrybutorzy-umowy.html">Umowy</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="app-administrator-dystrybutorzy-obszar.html">Obszar</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="app-administrator-dystrybutorzy-uzytkownicy.html">Użytkownicy</a></li>
                                 </ul>
                             </div>
                             <div class="table-responsive bg-white">
