--- a/app-administrator-dystrybutorzy-uzytkownicy.html
+++ b/app-administrator-dystrybutorzy-uzytkownicy.html
@@ -97,10 +97,10 @@
                             <div class="mb-4">
                                 <ul class="nav nav-tabs">
                                     <li class="nav-item"><a class="nav-link" href="app-administrator-dystrybutorzy-szczegoly.html">Dane firmy</a></li>
-                                    <li class="nav-item"><a class="nav-link active" href="app-administrator-dystrybutorzy-taryfy.html">Taryfy</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="app-administrator-dystrybutorzy-taryfy.html">Taryfy</a></li>
                                     <li class="nav-item"><a class="nav-link" href="app-administrator-dystrybutorzy-umowy.html">Umowy</a></li>
                                     <li class="nav-item"><a class="nav-link" href="app-administrator-dystrybutorzy-obszar.html">Obszar</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="app-administrator-dystrybutorzy-uzytkownicy.html">Użytkownicy</a></li>
+                                    <li class="nav-item"><a class="nav-link active" href="app-administrator-dystrybutorzy-uzytkownicy.html">Użytkownicy</a></li>
                                 </ul>
                             </div>
                             <div class="table-responsive bg-white">
@@ -110,9 +110,9 @@
                                             <th>
                                                 <div class="form-check"><input type="checkbox" class="form-check-input"></div>
                                             </th>
-                                            <th>Taryfa</th>
-                                            <th>Data publikacji</th>
-                                            <th>Obowiązuje do</th>
+                                            <th>Nazwisko</th>
+                                            <th>Imię</th>
+                                            <th>E-mail</th>
                                             <th>Status</th>
                                             <th class="text-end">Opcje</th>
                                         </tr>
@@ -122,18 +122,18 @@
                                             <th>
                                                 <div class="form-check"><input type="checkbox" class="form-check-input"></div>
                                             </th>
-                                            <td>G11</td>
-                                            <td>01.01.2022</td>
-                                            <td>31.12.2022</td>
+                                            <td>Chojnacki<br></td>
+                                            <td>Robert</td>
+                                            <td>robert.chojnacki@example.com<br></td>
                                             <td>
-                                                <div class="d-flex"><span class="badge bg-info d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-plus-circle me--5"></i><span>Zgłoszona</span></span></div>
+                                                <div class="d-flex"><span class="badge bg-success d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-check-circle me--5"></i><span>Aktywny</span></span></div>
                                             </td>
                                             <td>
-                                                <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
-                                                    <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="#">Szczegóły</a></div>
+                                                <div class="row gx-2 d-flex justify-content-end align-items-center">
+                                                    <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="#">Profil</a></div>
                                                     <div class="col-auto">
                                                         <div class="dropend"><button class="btn shadow-none rounded-0 p-0" aria-expanded="false" data-bs-toggle="dropdown" type="button"><i class="la la-ellipsis-v fs-3"></i></button>
-                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="#">Szczegóły</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń</a></div>
+                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="#">Pokaż profil</a><a class="dropdown-item" href="#">Edytuj</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń konto</a></div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -143,18 +143,18 @@
                                             <th>
                                                 <div class="form-check"><input type="checkbox" class="form-check-input" checked=""></div>
                                             </th>
-                                            <td>G12<br></td>
-                                            <td>01.01.2022</td>
-                                            <td>31.12.2022</td>
+                                            <td>Rośczak<br></td>
+                                            <td>Zofia</td>
+                                            <td>zofia.rosczak@example.com</td>
                                             <td>
-                                                <div class="d-flex"><span class="badge bg-danger d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-times-circle-o me--5"></i><span>Odrzucona</span></span></div>
+                                                <div class="d-flex"><span class="badge bg-success d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-check-circle me--5"></i><span>Aktywny</span></span></div>
                                             </td>
                                             <td>
-                                                <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
-                                                    <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="#">Szczegóły</a></div>
+                                                <div class="row gx-2 d-flex justify-content-end align-items-center">
+                                                    <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="#">Profil</a></div>
                                                     <div class="col-auto">
                                                         <div class="dropend"><button class="btn shadow-none rounded-0 p-0" aria-expanded="false" data-bs-toggle="dropdown" type="button"><i class="la la-ellipsis-v fs-3"></i></button>
-                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="#">Szczegóły</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń</a></div>
+                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="#">Pokaż profil</a><a class="dropdown-item" href="#">Edytuj</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń konto</a></div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -164,18 +164,18 @@
                                             <th>
                                                 <div class="form-check"><input type="checkbox" class="form-check-input"></div>
                                             </th>
-                                            <td>G12w</td>
-                                            <td>01.01.2022</td>
-                                            <td>31.12.2022</td>
+                                            <td>Adamczewski</td>
+                                            <td>Krzysztof</td>
+                                            <td>krzysztof.adamczewski@example.com</td>
                                             <td>
-                                                <div class="d-flex"><span class="badge bg-warning d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-clock-o me--5"></i><span>Zablokowana</span></span></div>
+                                                <div class="d-flex"><span class="badge bg-success d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-check-circle me--5"></i><span>Aktywny</span></span></div>
                                             </td>
                                             <td>
-                                                <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
-                                                    <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="#">Szczegóły</a></div>
+                                                <div class="row gx-2 d-flex justify-content-end align-items-center">
+                                                    <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="#">Profil</a></div>
                                                     <div class="col-auto">
                                                         <div class="dropend"><button class="btn shadow-none rounded-0 p-0" aria-expanded="false" data-bs-toggle="dropdown" type="button"><i class="la la-ellipsis-v fs-3"></i></button>
-                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="#">Szczegóły</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń</a></div>
+                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="#">Pokaż profil</a><a class="dropdown-item" href="#">Edytuj</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń konto</a></div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -185,18 +185,18 @@
                                             <th>
                                                 <div class="form-check"><input type="checkbox" class="form-check-input"></div>
                                             </th>
-                                            <td>C11</td>
-                                            <td>01.01.2022</td>
-                                            <td>31.12.2022</td>
+                                            <td>Sowiński</td>
+                                            <td>Zygmunt</td>
+                                            <td>zygmunt.sowinski@example.com</td>
                                             <td>
-                                                <div class="d-flex"><span class="badge bg-secondary d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-exclamation-circle me--5"></i><span>Uwagi</span></span></div>
+                                                <div class="d-flex"><span class="badge bg-warning d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-clock-o me--5"></i><span>Zablokowany</span></span></div>
                                             </td>
                                             <td>
-                                                <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
-                                                    <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="#">Szczegóły</a></div>
+                                                <div class="row gx-2 d-flex justify-content-end align-items-center">
+                                                    <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="#">Profil</a></div>
                                                     <div class="col-auto">
                                                         <div class="dropend"><button class="btn shadow-none rounded-0 p-0" aria-expanded="false" data-bs-toggle="dropdown" type="button"><i class="la la-ellipsis-v fs-3"></i></button>
-                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="#">Szczegóły</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń</a></div>
+                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="#">Pokaż profil</a><a class="dropdown-item" href="#">Edytuj</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń konto</a></div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -206,18 +206,18 @@
                                             <th>
                                                 <div class="form-check"><input type="checkbox" class="form-check-input"></div>
                                             </th>
-                                            <td>C12</td>
-                                            <td>01.01.2022</td>
-                                            <td>31.12.2022</td>
+                                            <td>Wójcicka</td>
+                                            <td>Anna</td>
+                                            <td>anna.wojcicka@example.com</td>
                                             <td>
-                                                <div class="d-flex"><span class="badge bg-success d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-check-circle me--5"></i><span>Zaakceptowana</span></span></div>
+                                                <div class="d-flex"><span class="badge bg-warning d-flex justify-content-start align-items-center rounded-pill px-2"><i class="la la-clock-o me--5"></i><span>Zablokowany</span></span></div>
                                             </td>
                                             <td>
-                                                <div class="row gx-2 d-flex justify-content-end align-items-center flex-nowrap">
-                                                    <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="#">Szczegóły</a></div>
+                                                <div class="row gx-2 d-flex justify-content-end align-items-center">
+                                                    <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="#">Profil</a></div>
                                                     <div class="col-auto">
                                                         <div class="dropend"><button class="btn shadow-none rounded-0 p-0" aria-expanded="false" data-bs-toggle="dropdown" type="button"><i class="la la-ellipsis-v fs-3"></i></button>
-                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="#">Szczegóły</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń</a></div>
+                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="#">Pokaż profil</a><a class="dropdown-item" href="#">Edytuj</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń konto</a></div>
                                                         </div>
                                                     </div>
                                                 </div>
