--- a/app-administrator-sprzedawcy-szczegoly.html
+++ b/app-administrator-sprzedawcy-szczegoly.html
@@ -99,6 +99,7 @@
                                     <li class="nav-item"><a class="nav-link active" href="app-administrator-sprzedawcy-szczegoly.html">Dane firmy</a></li>
                                     <li class="nav-item"><a class="nav-link" href="app-administrator-sprzedawcy-oferty.html">Oferty</a></li>
                                     <li class="nav-item"><a class="nav-link" href="app-administrator-sprzedawcy-umowy.html">Umowy</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="app-administrator-sprzedawcy-uzytkownicy.html">Użytkownicy</a></li>
                                 </ul>
                             </div>
                             <div class="bg-white shadow-sm py-3 px-4 mb-4">
