--- a/app-administrator-sprzedawcy.html
+++ b/app-administrator-sprzedawcy.html
@@ -91,6 +91,27 @@
                                 </div>
                             </nav>
                         </div>
+                        <div class="bg-primary px-4 py-3">
+                            <form>
+                                <div class="row justify-content-between">
+                                    <div class="col-auto">
+                                        <div class="input-group"><input class="form-control" type="text"><button class="btn btn-info shadow-none" type="button">Szukaj</button></div>
+                                    </div>
+                                    <div class="col-auto">
+                                        <div class="row align-items-center">
+                                            <div class="col-auto">
+                                                <div class="d-flex align-items-center mx-n1"><label class="form-label fw-bold text-white p-0 m-0 mx-1">Status</label><select class="form-select mx-1 py-1">
+                                                        <option value="">Wszystkie</option>
+                                                        <option value="">Aktywny</option>
+                                                        <option value="">Zablokowany</option>
+                                                    </select></div>
+                                            </div>
+                                            <div class="col-auto"><button class="btn btn-info" type="button">Filtruj</button></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
                         <div class="flex-grow-1 p-4">
                             <h2 class="mb-4">Sprzedawcy</h2>
                             <div class="table-responsive bg-white">
