--- a/app-administrator-dystrybutorzy-szczegoly.html
+++ b/app-administrator-dystrybutorzy-szczegoly.html
@@ -94,14 +94,18 @@
                         <div class="flex-grow-1 p-4">
                             <p class="mb-1">Dystrybutorzy</p>
                             <h2 class="mb-4">Stoen Operator Sp. z o.o.</h2>
-                            <div class="mb-4">
-                                <ul class="nav nav-tabs">
-                                    <li class="nav-item"><a class="nav-link active" href="app-administrator-dystrybutorzy-szczegoly.html">Dane firmy</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="app-administrator-dystrybutorzy-taryfy.html">Taryfy</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="app-administrator-dystrybutorzy-umowy.html">Umowy</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="app-administrator-dystrybutorzy-obszar.html">Obszar</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="app-administrator-dystrybutorzy-uzytkownicy.html">Użytkownicy</a></li>
-                                </ul>
+                            <div class="bg-white mx-n4 px-4 py-2 mb-4">
+                                <div class="row justify-content-between align-items-end">
+                                    <div class="col-auto">
+                                        <ul class="nav nav-tabs">
+                                            <li class="nav-item"><a class="nav-link active" href="app-administrator-dystrybutorzy-szczegoly.html">Dane firmy</a></li>
+                                            <li class="nav-item"><a class="nav-link" href="app-administrator-dystrybutorzy-taryfy.html">Taryfy</a></li>
+                                            <li class="nav-item"><a class="nav-link" href="app-administrator-dystrybutorzy-umowy.html">Umowy</a></li>
+                                            <li class="nav-item"><a class="nav-link" href="app-administrator-dystrybutorzy-obszar.html">Obszar</a></li>
+                                            <li class="nav-item"><a class="nav-link" href="app-administrator-dystrybutorzy-uzytkownicy.html">Użytkownicy</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
                             </div>
                             <div class="bg-white shadow-sm py-3 px-4 mb-4">
                                 <div class="row">
