--- a/app-administrator-sprzedawcy-uzytkownicy.html
+++ b/app-administrator-sprzedawcy-uzytkownicy.html
@@ -91,36 +91,47 @@
                                 </div>
                             </nav>
                         </div>
-                        <div class="bg-primary px-4 py-3">
-                            <form>
-                                <div class="row justify-content-between">
-                                    <div class="col-auto">
-                                        <div class="input-group"><input class="form-control" type="text"><button class="btn btn-info shadow-none" type="button">Szukaj</button></div>
-                                    </div>
-                                    <div class="col-auto">
-                                        <div class="row align-items-center">
-                                            <div class="col-auto">
-                                                <div class="d-flex align-items-center mx-n1"><label class="form-label fw-bold text-white p-0 m-0 mx-1">Status</label><select class="form-select mx-1 py-1">
-                                                        <option value="">Wszystkie</option>
-                                                        <option value="">Aktywny</option>
-                                                        <option value="">Zablokowany</option>
-                                                    </select></div>
-                                            </div>
-                                            <div class="col-auto"><button class="btn btn-info" type="button">Filtruj</button></div>
+                        <div class="offcanvas offcanvas-end" tabindex="-1" data-bs-keyboard="false" id="offcanvas__filters">
+                            <div class="offcanvas-header text-white bg-primary">
+                                <h5 class="offcanvas-title">Filtruj</h5><button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                            </div>
+                            <div class="offcanvas-body bg-light">
+                                <form>
+                                    <div class="row gy-3 row-cols-1">
+                                        <div class="col">
+                                            <div class="input-group"><input class="form-control" type="text"><button class="btn btn-info shadow-none" type="button">Szukaj</button></div>
+                                        </div>
+                                        <div class="col"><label class="form-label fw-bold">Status</label><select class="form-select">
+                                                <option value="">Wszystkie</option>
+                                                <option value="">Aktywny</option>
+                                                <option value="">Zablokowany</option>
+                                            </select></div>
+                                        <div class="col">
+                                            <div class="d-flex justify-content-end"><button class="btn btn-info" type="button" data-bs-target="#offcanvas__filters" data-bs-toggle="offcanvas">Filtruj</button></div>
                                         </div>
                                     </div>
-                                </div>
-                            </form>
+                                </form>
+                            </div>
                         </div>
                         <div class="flex-grow-1 p-4">
                             <p class="mb-1">Sprzedawcy</p>
                             <h2 class="mb-4">PKP Energetyka S.A.</h2>
-                            <div class="mb-4">
-                                <ul class="nav nav-tabs">
-                                    <li class="nav-item"><a class="nav-link" href="app-administrator-sprzedawcy-szczegoly.html">Dane firmy</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="app-administrator-sprzedawcy-oferty.html">Oferty</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="app-administrator-sprzedawcy-umowy.html">Umowy</a></li>
-                                    <li class="nav-item"><a class="nav-link active" href="app-administrator-sprzedawcy-uzytkownicy.html">Użytkownicy</a></li>
+                            <div class="bg-white px-4 py-2 mx-n4">
+                                <div class="row justify-content-between align-items-end">
+                                    <div class="col-auto">
+                                        <ul class="nav nav-tabs">
+                                            <li class="nav-item"><a class="nav-link" href="app-administrator-sprzedawcy-szczegoly.html">Dane firmy</a></li>
+                                            <li class="nav-item"><a class="nav-link" href="app-administrator-sprzedawcy-oferty.html">Oferty</a></li>
+                                            <li class="nav-item"><a class="nav-link" href="app-administrator-sprzedawcy-umowy.html">Umowy</a></li>
+                                            <li class="nav-item"><a class="nav-link active" href="app-administrator-sprzedawcy-uzytkownicy.html">Użytkownicy</a></li>
+                                        </ul>
+                                    </div>
+                                    <div class="col-auto"><button class="btn btn-primary" type="button" data-bs-target="#offcanvas__filters" data-bs-toggle="offcanvas">Filtruj</button></div>
+                                </div>
+                            </div>
+                            <div class="bg-primary mb-4 py-3 px-4 mx-n4">
+                                <ul class="list-inline mb-0">
+                                    <li class="list-inline-item"><span class="badge bg-info rounded-pill px-2"><span class="d-flex align-items-center mx-n1"><span class="fw-normal mx-1">Status:</span><strong class="mx-1">Aktywne</strong><i class="la la-close mx-1"></i></span></span></li>
                                 </ul>
                             </div>
                             <div class="table-responsive bg-white">
