--- a/app-administrator-taryfy.html
+++ b/app-administrator-taryfy.html
@@ -91,32 +91,79 @@
                                 </div>
                             </nav>
                         </div>
-                        <div class="bg-primary py-3 px-4">
-                            <form>
-                                <div class="row justify-content-between">
-                                    <div class="col-auto">
-                                        <div class="input-group"><input class="form-control" type="text"><button class="btn btn-info shadow-none" type="button">Szukaj</button></div>
-                                    </div>
-                                    <div class="col-auto">
-                                        <div class="row align-items-center">
-                                            <div class="col-auto">
-                                                <div class="d-flex align-items-center mx-n1"><label class="form-label fw-bold text-white p-0 m-0 mx-1">Status</label><select class="form-select mx-1 py-1">
-                                                        <option value="">Wszystkie</option>
-                                                        <option value="">Zgłoszona</option>
-                                                        <option value="">Zaakceptowana</option>
-                                                        <option value="">Z uwagami</option>
-                                                        <option value="">Zablokowana</option>
-                                                        <option value="">Odrzucona</option>
-                                                    </select></div>
-                                            </div>
-                                            <div class="col-auto"><button class="btn btn-info" type="button">Filtruj</button></div>
+                        <div class="offcanvas offcanvas-end" tabindex="-1" data-bs-keyboard="false" id="offcanvas__filters">
+                            <div class="offcanvas-header text-white bg-primary">
+                                <h5 class="offcanvas-title">Filtruj</h5><button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                            </div>
+                            <div class="offcanvas-body bg-light">
+                                <form>
+                                    <div class="row gy-3 row-cols-1">
+                                        <div class="col">
+                                            <div class="input-group"><input class="form-control" type="text"><button class="btn btn-info shadow-none" type="button">Szukaj</button></div>
+                                        </div>
+                                        <div class="col"><label class="form-label fw-bold">Dystrybutor</label><select class="form-select">
+                                                <option value="">Wszystkie</option>
+                                                <option value="">TAURON Dystrybucja S.A.</option>
+                                                <option value="">Stoen Operator Sp. z o.o.</option>
+                                                <option value="">Energa-Operator S.A.</option>
+                                                <option value="">PGE Dystrybucja S.A.</option>
+                                                <option value="">Enea Operator Sp. z o.o.</option>
+                                            </select></div>
+                                        <div class="col"><label class="form-label fw-bold">Taryfa</label><select class="form-select">
+                                                <option value="">Wszystkie</option>
+                                                <option value="">G11</option>
+                                                <option value="">G12</option>
+                                                <option value="">G12w</option>
+                                                <option value="">C11</option>
+                                                <option value="">C12</option>
+                                            </select></div>
+                                        <div class="col"><label class="form-label fw-bold">Data publikacji</label>
+                                            <div class="input-group"><select class="form-select">
+                                                    <option value="">Dowolnie</option>
+                                                    <option value="">Wcześniej niż</option>
+                                                    <option value="">Później niż</option>
+                                                </select><input class="form-control h-auto" type="date"></div>
+                                        </div>
+                                        <div class="col"><label class="form-label fw-bold">Obowiązuje do</label>
+                                            <div class="input-group"><select class="form-select">
+                                                    <option value="">Dowolnie</option>
+                                                    <option value="">Wcześniej niż</option>
+                                                    <option value="">Później niż</option>
+                                                </select><input class="form-control h-auto" type="date"></div>
+                                        </div>
+                                        <div class="col"><label class="form-label fw-bold">Status</label><select class="form-select">
+                                                <option value="">Wszystkie</option>
+                                                <option value="">Zgłoszona</option>
+                                                <option value="">Zaakceptowana</option>
+                                                <option value="">Z uwagami</option>
+                                                <option value="">Zablokowana</option>
+                                                <option value="">Odrzucona</option>
+                                            </select></div>
+                                        <div class="col">
+                                            <div class="d-flex justify-content-end"><button class="btn btn-info" type="button" data-bs-target="#offcanvas__filters" data-bs-toggle="offcanvas">Filtruj</button></div>
                                         </div>
                                     </div>
-                                </div>
-                            </form>
+                                </form>
+                            </div>
                         </div>
                         <div class="flex-grow-1 p-4">
-                            <h2 class="mb-4">Taryfy</h2>
+                            <div class="mb-4">
+                                <div class="row justify-content-between">
+                                    <div class="col-auto">
+                                        <h2 class="mb-0">Taryfy</h2>
+                                    </div>
+                                    <div class="col-auto"><button class="btn btn-primary" type="button" data-bs-target="#offcanvas__filters" data-bs-toggle="offcanvas">Filtruj</button></div>
+                                </div>
+                            </div>
+                            <div class="bg-primary mb-4 py-3 px-4 mx-n4">
+                                <ul class="list-inline mb-0">
+                                    <li class="list-inline-item"><span class="badge bg-info rounded-pill px-2"><span class="d-flex align-items-center mx-n1"><span class="fw-normal mx-1">Taryfa:</span><strong class="mx-1"><strong>G11</strong><br></strong><i class="la la-close mx-1"></i></span></span></li>
+                                    <li class="list-inline-item"><span class="badge bg-info rounded-pill px-2"><span class="d-flex align-items-center mx-n1"><span class="fw-normal mx-1">Dystrybutor:</span><strong class="mx-1"><strong>TAURON Dystrybucja S.A.</strong><br></strong><i class="la la-close mx-1"></i></span></span></li>
+                                    <li class="list-inline-item"><span class="badge bg-info rounded-pill px-2"><span class="d-flex align-items-center mx-n1"><span class="fw-normal mx-1">Data publikacji:</span><strong class="mx-1">Później niż</strong><strong class="mx-1">01.01.2022</strong><i class="la la-close mx-1"></i></span></span></li>
+                                    <li class="list-inline-item"><span class="badge bg-info rounded-pill px-2"><span class="d-flex align-items-center mx-n1"><span class="fw-normal mx-1">Obowiązuje do:</span><strong class="mx-1">Wcześniej niż</strong><strong class="mx-1">31.12.2022</strong><i class="la la-close mx-1"></i></span></span></li>
+                                    <li class="list-inline-item"><span class="badge bg-info rounded-pill px-2"><span class="d-flex align-items-center mx-n1"><span class="fw-normal mx-1">Status:</span><strong class="mx-1">Zaakceptowane</strong><i class="la la-close mx-1"></i></span></span></li>
+                                </ul>
+                            </div>
                             <div class="table-responsive bg-white">
                                 <table class="table table-sm mb-0 border-start border-end border-top align-middle">
                                     <thead class="bg-primary text-white">
