--- a/app-sprzedawca-uzytkownicy.html
+++ b/app-sprzedawca-uzytkownicy.html
@@ -31,10 +31,6 @@
                                                     <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"></path>
                                                     <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"></path>
                                                 </svg><span>Podsumowanie</span></a></li>
-                                        <li class="nav-item"><a class="nav-link text-uppercase border-3 d-flex align-items-center p-3 border-start border-3 border-lightblue" href="app-sprzedawca-pakiety.html"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-question-square me-3">
-                                                    <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"></path>
-                                                    <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"></path>
-                                                </svg><span>Pakiety</span></a></li>
                                         <li class="nav-item"><a class="nav-link text-uppercase border-3 d-flex align-items-center p-3 border-start border-3 border-lightblue" href="app-sprzedawca-oferty.html"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-question-square me-3">
                                                     <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"></path>
                                                     <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"></path>
@@ -43,18 +39,10 @@
                                                     <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"></path>
                                                     <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"></path>
                                                 </svg><span>Umowy</span></a></li>
-                                        <li class="nav-item"><a class="nav-link text-uppercase border-3 d-flex align-items-center p-3 border-start border-3 border-lightblue" href="app-sprzedawca-kalendarz.html"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-question-square me-3">
-                                                    <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"></path>
-                                                    <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"></path>
-                                                </svg><span>Kalendarz</span></a></li>
                                         <li class="nav-item"><a class="nav-link text-uppercase border-3 d-flex align-items-center p-3 border-start border-3 border-lightblue" href="app-sprzedawca-ustawienia.html"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-question-square me-3">
                                                     <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"></path>
                                                     <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"></path>
                                                 </svg><span>Ustawienia</span></a></li>
-                                        <li class="nav-item"><a class="nav-link text-uppercase border-3 d-flex align-items-center p-3 border-start border-3 border-lightblue" href="app-sprzedawca-kontakt.html"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-question-square me-3">
-                                                    <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"></path>
-                                                    <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"></path>
-                                                </svg><span>Kontakt</span></a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -98,29 +86,42 @@
                                 </div>
                             </nav>
                         </div>
-                        <div class="bg-primary px-4 py-3">
-                            <form>
-                                <div class="row justify-content-between">
-                                    <div class="col-auto">
-                                        <div class="input-group"><input class="form-control" type="text"><button class="btn btn-info shadow-none" type="button">Szukaj</button></div>
-                                    </div>
-                                    <div class="col-auto">
-                                        <div class="row align-items-center">
-                                            <div class="col-auto">
-                                                <div class="d-flex align-items-center mx-n1"><label class="form-label fw-bold text-white p-0 m-0 mx-1">Status</label><select class="form-select mx-1 py-1">
-                                                        <option value="">Wszystkie</option>
-                                                        <option value="">Aktywny</option>
-                                                        <option value="">Zablokowany</option>
-                                                    </select></div>
-                                            </div>
-                                            <div class="col-auto"><button class="btn btn-info" type="button">Filtruj</button></div>
+                        <div class="offcanvas offcanvas-end" tabindex="-1" data-bs-keyboard="false" id="offcanvas__filters">
+                            <div class="offcanvas-header text-white bg-primary">
+                                <h5 class="offcanvas-title">Filtruj</h5><button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                            </div>
+                            <div class="offcanvas-body bg-light">
+                                <form>
+                                    <div class="row gy-3 row-cols-1">
+                                        <div class="col">
+                                            <div class="input-group"><input class="form-control" type="text"><button class="btn btn-info shadow-none" type="button">Szukaj</button></div>
+                                        </div>
+                                        <div class="col"><label class="form-label fw-bold">Status</label><select class="form-select">
+                                                <option value="">Wszystkie</option>
+                                                <option value="">Aktywny</option>
+                                                <option value="">Zablokowany</option>
+                                            </select></div>
+                                        <div class="col">
+                                            <div class="d-flex justify-content-end"><button class="btn btn-info" type="button" data-bs-target="#offcanvas__filters" data-bs-toggle="offcanvas">Filtruj</button></div>
                                         </div>
                                     </div>
-                                </div>
-                            </form>
+                                </form>
+                            </div>
                         </div>
                         <div class="flex-grow-1 p-4">
-                            <h2 class="mb-4">Użytkownicy</h2>
+                            <div class="mb-4">
+                                <div class="row justify-content-between">
+                                    <div class="col-auto">
+                                        <h2 class="mb-0">Użytkownicy</h2>
+                                    </div>
+                                    <div class="col-auto"><button class="btn btn-primary" type="button" data-bs-target="#offcanvas__filters" data-bs-toggle="offcanvas">Filtruj</button></div>
+                                </div>
+                            </div>
+                            <div class="bg-primary mb-4 py-3 px-4 mx-n4">
+                                <ul class="list-inline mb-0">
+                                    <li class="list-inline-item"><span class="badge bg-info rounded-pill px-2"><span class="d-flex align-items-center mx-n1"><span class="fw-normal mx-1">Status:</span><strong class="mx-1"><strong>Aktywny</strong><br></strong><i class="la la-close mx-1"></i></span></span></li>
+                                </ul>
+                            </div>
                             <div class="table-responsive bg-white">
                                 <table class="table table-sm mb-0 border-start border-end border-top align-middle">
                                     <thead class="bg-primary text-white">
